test/ui/name-resolution/exposure/issue-69.stderr
error[E022]: binding ‘Box’ is not a module
  ┌─ ${TEST_FOLDER}/name-resolution/exposure/issue-69.lushui:6:10
  │
6 │ @(public Box)
  │          ═══

error: aborting due to previous error

