test/ui/name-resolution/exposure/issue-69.lushui
;;; TEST compiler-args --no-core -Z internals

@intrinsic
data Type: Type

@(public Box)
data Box: Type of
    box: Type -> Box

;;; [Description]
;;; Only one error should me emitted: `Box` not being a module (for it to be a valid exposure reach).
;;; However, it used to be the case (issue #69) that a second error was emitted incorrectly stating
;;; that `Box` was not defined. This is a regression test for this issue.
